--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,13 @@ body {
   padding: 30px;
   color: white;
 }
+@media only screen and (max-width: 600px) {
+  .title {
+    font-size: 2rem;
+  font-weight: 600;
+  padding: 10px;
+  }
+}
 
 .boardRow{
   display: flex;
